# whatsvector

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: __main__.py  chat.py  load.py
whatsvector/agent/: agent.py  context.py  state.py  tools.py
whatsvector/common/: language.py  log.py
whatsvector/config/: config_file.py
whatsvector/data/loaders/: loader.py
whatsvector/exceptions/: base.py  data.py
whatsvector/types/: data.py
